# vcf2popgen

./: .gitignore  README.md  pyproject.toml  requirements.txt  vcf2popgen.py
examples/: example_snps.bayescan  example_snps.genepop  example_snps.str
src/vcf2popgen/: __init__.py  classes.py  io.py  utils.py
tests/: test_utils.py
tests/vcf2popgen/: test.csv  test.vcf  test_classes.py  test_io.py  test_utils.py
vcf2popgen/: __init__.py  formats.py  io.py  utils.py  write_bayescan.py  write_genepop.py  write_structure.py
