[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "vcf2popgen"
version = "0.2.0"
authors = [
    { name="Jurjan van der Zee", email="jurjanvanderzee@gmail.com"}
]
description = "Convert bi-allelic SNPs stored in VCF files to various population genetic data formats"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL-3.0",
    "Operating System :: OS Independent",
]

dependencies = [
    "scikit-allel>=1.3.0"
]

[project.optional-dependencies]
test = [
    "pandas>=1.5.3"
]

[project.urls]
"Homepage" = "https://github.com/jpvdz/vcf2popgen"
"Bug Tracker" = "https://github.com/jpvdz/vcf2popgen/issues"
